--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "mongoose": "^5.0.10"
+    "mongoose": "^5.0.10",
+    "pug": "^2.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.17.2"
